# raia-protocol

./: .gitignore  CHARTER.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SPEC.md  charter.html  faq.html  index.html  vercel.json
.github/: pull_request_template.md
.well-known/: raia-agent.json
docs/: listing-spec-v0.2.md  portal-market-research.md  raia-portal-feed-api.md
docs/adr/: ADR-211-property-auth.md  ADR-212-registry-api.md
examples/: README.md  agent-card.json  enquiry.json  listing.json
mcp/: .env.example  README.md  package-lock.json  package.json
mcp/src/: index.ts  registry.ts  schemas.ts
mcp/src/tools/: raia_get_property.ts  raia_request_viewing.ts  raia_search.ts  raia_verify_agent.ts
modules/EU/: README.md
modules/GB/: README.md
modules/SG/: README.md
modules/TH/: README.md
modules/US/: README.md
openapi/: raia-portal-feed-api.yaml
samples/: README.md  enquiry-l0-l3.example.json  http-client-demo.mjs  mock-registry-server.mjs  python-client-demo.py  raia-agent.example.json
schemas/: README.md  agent-card.json  agent.json  enquiry.json  listing.json  property.json
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/raia_client/: __init__.py  client.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: index.ts
